--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     privileged: true
     environment:
       - DISPLAY=$DISPLAY
+      - ADB_VENDOR_KEYS:/root/.android
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /dev/bus/usb:/dev/bus/usb
@@ -25,6 +26,7 @@ services:
     privileged: true
     environment:
       - DISPLAY=$DISPLAY
+      - ADB_VENDOR_KEYS:/root/.android
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /dev/bus/usb:/dev/bus/usb
@@ -42,6 +44,7 @@ services:
     privileged: true
     environment:
       - DISPLAY=$DISPLAY
+      - ADB_VENDOR_KEYS:/root/.android
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /dev/bus/usb:/dev/bus/usb
