Removed -S option from scrcpy in docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - scrcpy:/root/.android
     devices:
       - /dev/snd
-    command: scrcpy -S
+    command: scrcpy
 
 
 volumes:
